--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -5,66 +5,47 @@
     <title>KYUSDA | Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <link rel="icon" href="https://fav.farm/✅" /> -->
     <link rel="icon" href="img/kyusdalogo.png" />
   </head>
 
   <body>
     <!-- ........................................HEADER COROUSEL........................... -->
     <header>
-      <!-- <div class="bg-showcase"><h1>r</h1></div> -->
       <!-- Slideshow container -->
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
           <!-- <div class="numbertext">1 / 3 Announcement</div> Display slide number -->
           <div class="bg-showcase"></div>
-          <!-- <div class="text date-text">this week's Events👉</div> -->
           <!-- Display caption for image 1 -->
           <div class="slideshow-text">
             <h2>welcome to kyusda</h2>
             <p class="slogan">We Love You, We Cherish you, and We Value you.</p>
             <br />
             <br />
-            <!-- <p class="announcements">See this week's Events👉</p> -->
           </div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">1 / 2 update</div>
-          <!-- Display slide number -->
-          <!-- <img src="img/announcement.jpg" /> -->
           <div class="bg-showcase-announcement1"></div>
-          <!-- Display image 2 -->
-          <!-- <div class="text">Caption Two</div> -->
-          <!-- Display caption for image 2 -->
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">2 / 2 update</div>
-          <!-- Display slide number -->
-          <!-- <img src="img/img3.jpg" /> -->
           <div class="bg-showcase-announcement2"></div>
-          <!-- Display image 3 -->
-          <!-- <div class="text">Caption Three</div> -->
-          <!-- Display caption for image 3 -->
         </div>
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <!-- Display previous slide button -->
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        <!-- Display next slide button -->
-
-        <!-- The dots/circles -->
       </div>
+
+      <!-- Displaying The dots/circles -->
       <div class="dots">
         <span class="dot" onclick="currentSlide(1)"></span>
-        <!-- Display dot for slide 1 -->
         <span class="dot" onclick="currentSlide(2)"></span>
-        <!-- Display dot for slide 2 -->
         <span class="dot" onclick="currentSlide(3)"></span>
-        <!-- Display dot for slide 3 -->
       </div>
     </header>
 
