--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -15,9 +15,7 @@
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-          <!-- <div class="numbertext">1 / 3 Announcement</div> Display slide number -->
           <div class="bg-showcase"></div>
-          <!-- Display caption for image 1 -->
           <div class="slideshow-text">
             <h2>welcome to kyusda</h2>
             <p class="slogan">We Love You, We Cherish you, and We Value you.</p>
@@ -53,21 +51,10 @@
 
     <nav id="main">
       <ul>
-        <li class="logo">
-          <a href="#"
-            ><img
-              src="img/kyusdalogo.png"
-              alt="KYUSDA logo"
-              width="40"
-              height="40"
-          /></a>
-        </li>
+        <li class="logo"><a href="#"><imgsrc="img/kyusdalogo.png" alt="KYUSDA logo" width="40" height="40"/></a></li>
         <li class="nav-icons"><i class="fa fa-home"></i><a href="#">Home</a></li>
-        <!-- <li><a href="#">About</a></li> -->
         <li class="nav-icons"><i class="fa-solid fa-people-group"></i><a href="#">Families</a></li>
         <li class="nav-icons"><i class="fa fa-building"></i><a href="#">Departments</a></li>
-        <!-- <li><a href="#">Announcements</a></li> -->
-        <!-- <li class="nav-icons"><i class="fa-solid fa-comments"></i></i><a href="#">Testimonials</a></li> -->
         <li class="nav-icons"><i class="fa-solid fa-comments"></i></i><a href="#">Events</a></li>
         <li class="nav-icons"><i class="fa-solid fa-book"></i></i></i><a href="#">Resources</a></li>
         <li class="nav-icons"><i class="fa-solid fa-book"></i></i></i><a href="#">Blogs</a></li>
@@ -75,9 +62,10 @@
       </ul>
     </nav>
 
+    <!-- ......HOME PAGE BODY...... -->
     <div class="site-wrap">
       <div class="about-us-img">
-        <img src="img/bgimage7.jpg" alt="medical students">
+        <img src="img/bgimage7.jpg" alt="medical students" title="medical students after a sabbath worship">
         <div class="icons">
           <a href="https://www.youtube.com/@kyusdachurch9822" target="_blank"><i class="fab fa-youtube fa-2x" style="color: red;"></i></a>
           <a href=""><i class="fab fa-facebook fa-2x" style="color: blue;"></i></a>
@@ -95,10 +83,6 @@
         <p class="about-us-paragraphs">
           Guided by the Bible and the Holy Spirit, we pursue this mission through Christ-like living, communicating, discipling, teaching, healing, and serving.
         </p>
-        <!-- <h4>Our Vision</h4>
-        <p>
-          In harmony with Bible revelation, Seventh-day Adventists see as the climax of God’s plan the restoration of all His creation to full harmony with His perfect will and righteousness.
-        </p> -->
         <h4 class="about-text-title">Our Worship</h4>
         <p class="about-us-paragraphs">
           Join us for our vesperses, weekly Sabbath worship services, where we come together to worship, sing hymns, and study God's Word. We also offer various ministries and programs to enrich your spiritual journey and help you grow in your relationship with God.
@@ -111,45 +95,6 @@
         <p class="about-us-paragraphs">
           We invite you to be part of our church family. Whether you are seeking spiritual growth, fellowship, or a place to serve, Kyusda has a place for you. Explore our website to learn more about our ministries, events, and how you can get involved.
         </p>
-      </div>
-    </div>
-
-    <div class="eldership-profile">
-      <div class="title">
-        <h2>Eldership</h2>
-      </div>
-
-      <div class="profiles">
-        <figure class="img-container">
-          <img src="img/elderprofile.png" alt="elderprofile" width="150" height="150">
-          <p class="elder-name">Pst. Otula</p>
-          <!-- <p>It is either today or now or right away that the Lord has called us to make known His kingdom</p> -->
-        </figure>
-        <figure class="img-container">
-          <img src="img/elderprofile.png" alt="elderprofile" width="150" height="150">
-          <p class="elder-name">Eld. Ibrah</p>
-          <p>Elder in charge of deaconry, chaplaincy, SOP, P.A & Communication departments</p>
-        </figure>
-        <figure class="img-container">
-          <img src="img/elderprofile.png" alt="elderprofile" width="150" height="150">
-          <p class="elder-name">Eld. Ibrah</p>
-          <p>Elder in charge of deaconry, chaplaincy, SOP, P.A & Communication departments</p>
-        </figure>
-        <figure class="img-container">
-          <img src="img/elderprofile.png" alt="elderprofile" width="150" height="150">
-          <p class="elder-name">Eld. Ibrah</p>
-          <p>Elder in charge of deaconry, chaplaincy, SOP, P.A & Communication departments</p>
-        </figure>
-        <figure class="img-container">
-          <img src="img/elderprofile.png" alt="elderprofile" width="150" height="150">
-          <p class="elder-name">Eld. Ibrah</p>
-          <p>Elder in charge of deaconry, chaplaincy, SOP, P.A & Communication departments</p>
-        </figure>
-        <figure class="img-container">
-          <img src="img/elderprofile.png" alt="elderprofile" width="150" height="150">
-          <p class="elder-name">Eld. Ibrah</p>
-          <p>Elder in charge of deaconry, chaplaincy, SOP, P.A & Communication departments</p>
-        </figure>
       </div>
     </div>
 
