--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -55,9 +55,9 @@
         <li class="nav-icons"><i class="fa fa-home"></i><a href="#">Home</a></li>
         <li class="nav-icons"><i class="fa-solid fa-people-group"></i><a href="#">Families</a></li>
         <li class="nav-icons"><i class="fa fa-building"></i><a href="#">Departments</a></li>
-        <li class="nav-icons"><i class="fa-solid fa-comments"></i></i><a href="#">Events</a></li>
-        <li class="nav-icons"><i class="fa-solid fa-book"></i></i></i><a href="#">Resources</a></li>
-        <li class="nav-icons"><i class="fa-solid fa-book"></i></i></i><a href="#">Blogs</a></li>
+        <li class="nav-icons"><i class="fa fa-calendar"></i><a href="#">Events</a></li>
+        <li class="nav-icons"><i class="fa-solid fa-book"></i><a href="#">Resources</a></li>
+        <li class="nav-icons"><i class="fa-solid fa-book"></i><a href="#">Blogs</a></li>
         <li ><a href="#" class="active">Membership</a></li>
       </ul>
     </nav>
