added markup for featured content section

--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -98,6 +98,46 @@
       </div>
     </div>
 
+    <!-- FEATURED CONTENT -->
+    <div class="featured-content">
+      <div class="featured-content-text">
+        <h2>Featured Content</h2>
+      </div>
+      <div class="featured-content-img">
+        <ul>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          <div class="img-holder">
+            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
+          </div>
+          
+        </ul>
+      </div>
+    </div>
+  </div>
+
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
