--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -103,40 +103,87 @@
       <div class="featured-content-text">
         <h2>Featured Content</h2>
       </div>
-      <div class="featured-content-img">
-        <ul>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          <div class="img-holder">
-            <li><a href=""><img src="img/annoucement2.jpg" alt="camp meeting" title="camp meeting 2023"></a></li>
-          </div>
-          
-        </ul>
+      <div class="featured-content-img-holder">
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+        <figure class="img-holder">
+          <a href="">
+            <img src="img/annoucement2.jpg" alt="featured content"/>
+          </a>
+          <figcaption>camp meeting 2023</figcaption>
+        </figure>
+      </div>
+       
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+      <div class="footer-title">
+        <h2>Contact Us</h2>
+      </div>
+
+      <div class="footer-content-left">
+        <p>P. O. BOX 62000 - 00200, Nairobi, Kenya.</p>
+        <p> Kirinyaga Campus</p>
+      </div>
+      <div class="footer-content-right">
+        <p>+254 111 834 738</p>
+        <p> kyusdachurch@gmail.com</p>
       </div>
     </div>
-  </div>
+
 
     <script src="script.js"></script>
 </body>
