--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -172,15 +172,19 @@
     <div class="footer">
       <div class="footer-title">
         <h2>Contact Us</h2>
+        <hr>
       </div>
 
       <div class="footer-content-left">
-        <p>P. O. BOX 62000 - 00200, Nairobi, Kenya.</p>
-        <p> Kirinyaga Campus</p>
+        <p><i class="fa fa-map-marker"></i>Kirinyaga Campus</p>
+        <p><i class="fas fa-at"></i>P.O. Box: 143-10300 Kerugoya, Kenya.</p>
       </div>
       <div class="footer-content-right">
-        <p>+254 111 834 738</p>
-        <p> kyusdachurch@gmail.com</p>
+        <p><i class="fa fa-phone"></i>+254 111 834 738</p>
+        <p><i class="fa fa-envelope-open"></i> kyusdachurch@gmail.com</p>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2019 - 2023 KYUSDA Church</p>
       </div>
     </div>
 
