--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -47,7 +47,7 @@
       </div>
     </header>
 
-    <!-- NAVIGATION -->
+    <!-- ...................NAVIGATION.................... -->
 
     <nav id="main">
       <ul>
@@ -165,7 +165,6 @@
           <figcaption>camp meeting 2023</figcaption>
         </figure>
       </div>
-       
     </div>
 
     <!-- FOOTER -->
@@ -188,7 +187,7 @@
       </div>
     </div>
 
-
+    <!-- Link to javascript -->
     <script src="script.js"></script>
 </body>
 </html>
