--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -21,12 +21,12 @@
           </div>
           <div class="nav-links">
               <ul>
-                  <li class="nav-icons"><i class="fa fa-home"></i><a href="#">Home</a></li>
-                  <li class="nav-icons"><i class="fa-solid fa-people-group"></i><a href="#">Families</a></li>
-                  <li class="nav-icons"><i class="fa fa-building"></i><a href="#">Departments</a></li>
-                  <li class="nav-icons"><i class="fa fa-calendar"></i><a href="#">Events</a></li>
-                  <li class="nav-icons"><i class="fa-solid fa-book"></i><a href="#">Resources</a></li>
-                  <li class="nav-icons"><i class="fa-solid fa-book"></i><a href="#">Blogs</a></li>
+                  <li class="nav-icons"><a href="#">Home</a></li>
+                  <li class="nav-icons"><a href="#">Families</a></li>
+                  <li class="nav-icons"><a href="#">Departments</a></li>
+                  <li class="nav-icons"><a href="#">Events</a></li>
+                  <li class="nav-icons"><a href="#">Resources</a></li>
+                  <li class="nav-icons"><a href="#">Blogs</a></li>
               </ul>
           </div>
           <div class="membership-btn">
