changed the first slideshow image

--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -38,7 +38,7 @@
       <div class="slideshow-container">
           <div class="mySlides fade">
               <div class="caption"><h1>Welcome To KYUSDA</h1><p>Matthew 24:14</p></div>
-              <img src="img/Screenshot (499).png" alt="choristers during song session">
+              <img src="img/kirinyiga1.jpg" alt="choristers during song session">
           </div>
 
           <div class="mySlides fade">
