added mobile menu version

--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -11,28 +11,35 @@
   <body>
     <header>
       <div class="header-title">
-          <p>Welcome To Kirinyaga University Seventh-Day Adventist Church. We Love you, We cherish you and We value you!</p>
-      </div>
-      <div class="header-navigation">
-          <div class="logo">
-              <a href="#">
-                  <img src="img/white-logo.jpeg" alt="kyusda logo">
-              </a>
-          </div>
-          <div class="nav-links">
-              <ul>
-                  <li class="nav-icons"><a href="#">Home</a></li>
-                  <li class="nav-icons"><a href="#">Families</a></li>
-                  <li class="nav-icons"><a href="#">Departments</a></li>
-                  <li class="nav-icons"><a href="#">Events</a></li>
-                  <li class="nav-icons"><a href="#">Resources</a></li>
-                  <li class="nav-icons"><a href="#">Blogs</a></li>
-              </ul>
-          </div>
-          <div class="membership-btn">
-              <a href="#"><i class="fa fa-user"></i>Sign in for Membership</a>
-          </div>
-      </div>
+        <p>Welcome To Kirinyaga University Seventh-Day Adventist Church. We Love you, We cherish you and We value you!</p>
+    </div>
+    <nav>
+        <div class="logo">
+            <a href="#">
+                <img src="img/white-logo.jpeg" alt="kyusda logo">
+            </a>
+        </div>
+        <div class="openMenu"><i class="fa fa-bars"></i></div>
+        <ul class="mainMenu">
+            <div class="nav-links">
+            <li class="nav-icons"><a href="#">Home</a></li>
+            <li class="nav-icons"><a href="#">Families</a></li>
+            <li class="nav-icons"><a href="#">Departments</a></li>
+            <li class="nav-icons"><a href="#">Events</a></li>
+            <li class="nav-icons"><a href="#">Resources</a></li>
+            <li class="nav-icons"><a href="#">Blogs</a></li>
+        </div>
+            <div class="membership-btn">
+                <a href="#"><i class="fa fa-user"></i>Sign in for Membership</a>
+            </div>
+
+            <div class="closeMenu"><i class="fa fa-times"></i></div>
+            <span class="icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-youtube"></i>
+            </span>
+        </ul>
+    </nav>
 
       <!-- Slideshow container -->
       <div class="slideshow-container">
@@ -66,94 +73,6 @@
           <i class="fa fa-angle-double-down"></i>
       </div>
 
-    <!-- FEATURED CONTENT -->
-    <div class="featured-content">
-      <div class="featured-content-text">
-        <h2>Featured Content</h2>
-      </div>
-      <div class="featured-content-img-holder">
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-        <figure class="img-holder">
-          <a href="">
-            <img src="img/annoucement2.jpg" alt="featured content" />
-          </a>
-          <figcaption>camp meeting 2023</figcaption>
-        </figure>
-      </div>
-    </div>
-
-    <!-- FOOTER -->
-    <div class="footer">
-      <div class="footer-title">
-        <h2>Contact Us</h2>
-        <hr />
-      </div>
-
-      <div class="footer-content-left">
-        <p><i class="fa fa-map-marker"></i>Kirinyaga Campus</p>
-        <p><i class="fas fa-at"></i>P.O. Box: 143-10300 Kerugoya, Kenya.</p>
-      </div>
-      <div class="footer-content-right">
-        <p><i class="fa fa-phone"></i>+254 111 834 738</p>
-        <p><i class="fa fa-envelope-open"></i> kyusdachurch@gmail.com</p>
-      </div>
-      <div class="copyright">
-        <p>&copy; 2019 - 2023 KYUSDA Church</p>
-      </div>
-    </div>
 
     <script src="script.js"></script>
   </body>
