navigation part(showcase)

--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-icons"><a href="#">Departments</a></li>
                     <li class="nav-icons"><a href="#">Events</a></li>
                     <li class="nav-icons"><a href="#">Resources</a></li>
-                    <li class="nav-icons"><a href="#">Blogs</a></li>
+                    <li class="nav-icons"><a href="./blog/blog.html">Blogs</a></li>
                 </div>
                 <div class="membership-btn">
                     <a href="#"><i class="fa fa-user"></i>Sign in for Membership</a>
