worked on home nav

--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -28,9 +28,13 @@
                     <li class="nav-icons"><a href="#">Events</a></li>
                     <li class="nav-icons"><a href="#">Resources</a></li>
                     <li class="nav-icons"><a href="./blog/blog.html">Blogs</a></li>
+                    <li class="nav-icons"><a href="#">Contact</a></li>
                 </div>
                 <div class="membership-btn">
-                    <a href="#"><i class="fa fa-user"></i>Sign in for Membership</a>
+                    <a href="#">
+                        <i class="fa fa-user"></i>
+                        <h4>Sign in for Membership</h4>
+                    </a>
                 </div>
 
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
@@ -60,18 +64,11 @@
                 <div class="bg-image"></div>
                 <img src="img/hero-1.JPG" alt="choristers during song session">
             </div>
-            <div class="mySlides fade">
-                <div class="bg-image"></div>
-                <img src="img/hero-2.JPG" alt="choristers during song session">
-            </div>
         </div>
     
         <!-- Pause btn -->
         <button id="pauseButton" class="icon">&#10074;&#10074;</button>
  </header>
-      <div class="arrow-down">
-          <i class="fa fa-angle-double-down"></i>
-      </div>
 
       <main>
             <section class="about-us">
