--- a/SlideShow Corousel/index.html
+++ b/SlideShow Corousel/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="membership-btn">
                     <a href="#">
-                        <i class="fa fa-user"></i>
+                        <!-- <i class="fa fa-user"></i> -->
                         <h4>Sign in for Membership</h4>
                     </a>
                 </div>
