worked on the file links

--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>KYUSDA | Home</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="main.css" />
-        <link rel="icon" href="../images/kyusdalogo.png" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="img/kyusdalogo.png" />
       </head>
 <body>
     <header id="main-header">
@@ -39,7 +39,7 @@
             <div class="top-row-two" id="myHeader">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="../images/kyusdalogo.png" alt="kyusda logo" />
+                        <img src="img/kyusdalogo.png" alt="kyusda logo" />
                         <span>KYUSDA CHURCH</span>
                     </a>
                 </div>
@@ -51,7 +51,7 @@
                         <li><a href="#">Departments</a></li>
                         <li><a href="#">Resources</a></li>
                         <li><a href="#">Events</a></li>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="./blog/blog.html">Blogs</a></li>
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#" id="search-icon"><i class="fa fa-search"></i></a></li>
                     </ul>
@@ -88,7 +88,7 @@
             <div class="about-us-left">
                 <div class="left">
                     <!-- <i class="fa-solid fa-book-bible"></i> -->
-                    <img src="../images/dua-hands_84660.png" alt="">
+                    <img src="img/dua-hands_84660.png" alt="">
                     <p>DAILY PRAYERS</p>
                 </div>
     
@@ -130,27 +130,27 @@
         <!-- ELDERSHIP PROFILE SECTION -->
         <section class="eldership-section">
                 <div class="profile">
-                    <img src="../images/profile-side.jpg" alt="">
+                    <img src="img/profile-side.jpg" alt="">
                     <h3>ELDER</h3>
                     <h2>JOHN DOE</h2>
                 </div>
                 <div class="profile">
-                    <img src="../images/profile-side.jpg" alt="">
+                    <img src="img/profile-side.jpg" alt="">
                     <h3>ELDER</h3>
                     <h2>JOHN DOE</h2>
                 </div>
                 <div class="profile">
-                    <img src="../images/profile-side.jpg" alt="">
+                    <img src="img/profile-side.jpg" alt="">
                     <h3>ELDER</h3>
                     <h2>JOHN DOE</h2>
                 </div>
                 <div class="profile">
-                    <img src="../images/profile-side.jpg" alt="">
+                    <img src="img/profile-side.jpg" alt="">
                     <h3>ELDER</h3>
                     <h2>JOHN DOE</h2>
                 </div>
                 <div class="profile">
-                    <img src="../images/profile-side.jpg" alt="">
+                    <img src="img/profile-side.jpg" alt="">
                     <h3>ELDER</h3>
                     <h2>JOHN DOE</h2>
                 </div>
@@ -159,16 +159,16 @@
         <!-- GALLERY SECTION -->
         <section class="gallery-section">
             <div class="gallery">
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
-                <img src="../images/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
+                <img src="img/hero-4.JPG" alt="kyusda image" />
             </div>
         </section>
     </main>
@@ -178,6 +178,6 @@
             
 
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
