--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -51,7 +51,7 @@
                         <li><a href="#">Departments</a></li>
                         <li><a href="#">Resources</a></li>
                         <li><a href="#">Events</a></li>
-                        <li><a href="./blog/blog.html">Blogs</a></li>
+                        <li><a href="blog/blog.html">Blogs</a></li>
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#" id="search-icon"><i class="fa fa-search"></i></a></li>
                     </ul>
