changed sabbath worship image

--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -106,7 +106,8 @@
                 </div>
     
                 <div class="right">
-                    <i class="fa-solid fa-book-bible"></i>
+                    <!-- <a href="https://www.flaticon.com/free-icons/people"></a> -->
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1ErKnDZLzZLcE3A42pwGedtOFq9AlINDTuw&usqp=CAU" alt="">
                     <p>Sabbath worship</p>
                 </div>
             </div>
