--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/kyusdalogo.png" />
+    <link rel="icon" href="/kyusda.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KYUSDA</title>
   </head>
